src/pages/Connect People/connect.css
.user-box {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 10px;
  border-radius: 10px;
  background-color: #e6e6e6;
  margin: 1rem;
}
.user-profile {
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
}
.all-user-details {
  margin-left: 10px;
}
.btn-follow {
  background-color: #06f;
  padding: 10px 30px;
  font-size: 17px;
  color: white;
  border: none;
  border-radius: 10px;
  outline: none;
  margin: 1rem 0 0 0.5rem;
  font-weight: bold;
}
@media screen and (max-width: 768px) {
  .people-list {
    display: flex;
    align-items: center;
    justify-content: center;
    overflow-x: scroll;
  }
  .heading-ctp {
    text-align: center;
  }
  .user-box {
    flex-direction: column;
  }
}

